--- a/content/css/style.css
+++ b/content/css/style.css
@@ -25,7 +25,7 @@ select {
 
 input[type="button"] {
   width: 100%;
-  background-color: #b2d02a;
+  background-color: #26a69a;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
